# hunt-cnpj

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  main.py  pyproject.toml  readme.data.md  readme.md
database/: initial.sql
scripts/: config.py  database.py  downloader.py  processor.py
tests/: test_downloader.py  test_processor.py
